# bear-anki-sync

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: anki.rs  app.rs  auth_error.rs  config.rs  lib.rs  main.rs  parser.rs  render.rs  state.rs  sync.rs
