[package]
name = "bear-anki-sync"
version = "0.1.0"
description = "Sync flashcards from Bear.app to Anki via AnkiConnect"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BIRSAx2/bear-anki-sync"
homepage = "https://github.com/BIRSAx2/bear-anki-sync"
keywords = ["bear", "anki", "notes", "flashcards", "macos"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[[bin]]
name = "bear-anki"
path = "src/main.rs"

[dependencies]
bear-cli       = "0.2.3"
anyhow         = "1.0"
clap           = { version = "4.5", features = ["derive"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
sha2           = "0.10"
hex            = "0.4"
ureq           = "2"
pulldown-cmark = "0.13.3"
