[package]
name = "bear-anki-sync"
version = "0.4.0"
description = "Sync flashcards from Bear.app to Anki via AnkiConnect"
edition = "2021"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BIRSAx2/bear-anki-sync"
homepage = "https://github.com/BIRSAx2/bear-anki-sync"
keywords = ["bear", "anki", "notes", "flashcards", "macos"]
categories = ["command-line-utilities"]
include = ["src/**", "assets/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[[bin]]
name = "bear-anki"
path = "src/main.rs"

[[bin]]
name = "bear-anki-app"
path = "src/app.rs"

[dependencies]
bear-rs        = "0.2.0"
anyhow         = "1.0"
base64         = "0.22"
clap           = { version = "4.5", features = ["derive", "env"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
sha2           = "0.10"
hex            = "0.4"
ureq           = "2"
pulldown-cmark = "0.13.3"
toml           = "0.8"
tray-icon      = "0.19"
muda           = "0.15"
winit          = "0.30"
resvg          = "0.45"
tiny-skia      = "0.11"
usvg           = "0.45"
